# sigye

./: Cargo.toml  README.md
assets/: demo.tape
crates/sigye/: Cargo.toml
crates/sigye-config/: Cargo.toml
crates/sigye-config/src/: lib.rs
crates/sigye-core/: Cargo.toml
crates/sigye-core/src/: lib.rs
crates/sigye-fonts/: Cargo.toml
crates/sigye-fonts/src/: bundled.rs  font.rs  lib.rs  parser.rs  registry.rs
crates/sigye/src/: background.rs  main.rs  settings.rs
