[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["am2rican5 <am2rican5@gmail.com>"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
ratatui = "0.29.0"
crossterm = "0.29"
chrono = "0.4"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
sigye-core = { path = "crates/sigye-core" }
sigye-fonts = { path = "crates/sigye-fonts" }
sigye-config = { path = "crates/sigye-config" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
