[package]
name = "sigye"
description = "A beautiful terminal clock with ASCII art fonts"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["cli", "clock", "terminal", "tui", "figlet"]
categories = ["command-line-utilities"]

[dependencies]
sigye-core.workspace = true
sigye-config.workspace = true
sigye-fonts.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
color-eyre.workspace = true
